# mock-autopilot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  docker_run.sh  fake_autopilot.cpp  mavsdk.patch  mavsdk_0.39.0_ubuntu20.04_amd64.deb  mock-autopilot.cpp  package.sh
.github/workflows/: package.yml
debian/: changelog  control  copyright  rules
